# swampert

./: README.md
.claude/: CLAUDE.md
api/: .env.sample  .gitignore  compose.yml  dbdiagram.dbml  pyproject.toml
api/source/: boot.py
api/source/configs/: database.py  migrator.py
api/source/database/: migrator.py  pooling.py
api/source/database/functions/: agents.py  errors.py  executions.py  kpis.py  swarms.py  timeline.py
api/source/database/migrations/: 0001-extensions.sql  0002-schemas.sql  0003-enums.sql  0004-tenants.sql  0005-users.sql  0006-agents.sql  0007-swarms.sql  0008-swarm_agents.sql  0009-tasks.sql  0010-executions.sql  0011-execution_steps.sql  0012-token_costs.sql  0013-execution_errors.sql  0014-audit_logs.sql  0015-security.sql  0016-seeders.sql  0017-clustering.sql  0017-seeders.sql  0018-definer.sql
api/source/presentation/controllers/: agents_controller.py  dashboard_controller.py  errors_controller.py  executions_controller.py  swarms_controller.py
api/source/presentation/middleware/: tenant_middleware.py
client/: README.md  package.json  svelte.config.js  vite.config.ts
client/src/: app.css  app.html
client/src/common/apis/: axios.ts  services.ts
client/src/common/stores/: daterange.svelte.ts  tenant.svelte.ts
client/src/models/: entities.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/dashboard/: +page.svelte  +page.ts
context/: approach.md  concepts.md  contracts.md  database.md  indicators.md  modeling.md  overview.md  problems.md  seedings.md  sqlqueries.md  uidesign.md
(+17 files in other folders)
