[project]
name = "swampert-api"
description = "Agent Swarms for LLMs Agents"

version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
